minio/patch_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
spec:
  template:
    spec:
      containers:
      - name: minio
        resources:
          requests:
            memory: 256Mi
