minio/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio
spec:
  entryPoints:
    - http
    - https
  routes:
  - match: HostRegexp(`minio.{domain:.+}`)
    kind: Rule
    middlewares:
    #- name: basicauth
    services:
    - name: minio
      port: 9000
